IPv6 appears to be working other than making the roots do IPv6

--- a/config-files/servers-rc.conf
+++ b/config-files/servers-rc.conf
@@ -1,4 +1,5 @@
 hostname="servers-vm"
+defaultrouter="172.21.1.1"
 ifconfig_em0="inet 192.168.56.40/24"
 ifconfig_em1="inet 172.21.1.2/24"
 ifconfig_em1_alias0="inet 172.21.101.1/24"
@@ -14,7 +15,23 @@ ifconfig_em1_alias9="inet 172.21.110.1/24"
 ifconfig_em1_alias10="inet 172.21.111.1/24"
 ifconfig_em1_alias11="inet 172.21.112.1/24"
 ifconfig_em1_alias12="inet 172.21.113.1/24"
-defaultrouter="172.21.1.1"
+
+ifconfig_em1_ipv6="inet6 fd00::21:1:2/112"
+ipv6_defaultrouter="fd00::21:1:1"
+ifconfig_em1_alias0_ipv6="inet6 fd00::21:101:1/112"
+ifconfig_em1_alias1_ipv6="inet6 fd00::21:102:1/112"
+ifconfig_em1_alias2_ipv6="inet6 fd00::21:103:1/112"
+ifconfig_em1_alias3_ipv6="inet6 fd00::21:104:1/112"
+ifconfig_em1_alias4_ipv6="inet6 fd00::21:105:1/112"
+ifconfig_em1_alias5_ipv6="inet6 fd00::21:106:1/112"
+ifconfig_em1_alias6_ipv6="inet6 fd00::21:107:1/112"
+ifconfig_em1_alias7_ipv6="inet6 fd00::21:108:1/112"
+ifconfig_em1_alias8_ipv6="inet6 fd00::21:109:1/112"
+ifconfig_em1_alias9_ipv6="inet6 fd00::21:110:1/112"
+ifconfig_em1_alias10_ipv6="inet6 fd00::21:111:1/112"
+ifconfig_em1_alias11_ipv6="inet6 fd00::21:112:1/112"
+ifconfig_em1_alias12_ipv6="inet6 fd00::21:113:1/112"
+
 sendmail_submit_enable="NO"
 sendmail_outbound_enable="NO"
 sendmail_msp_queue_enable="NO"
