Parsing Ansible inventory for Vagrant

--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -1,15 +1,21 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-HOSTONLY_NET = "vboxnet1"
-BRIDGE_NET = "bge0"
-RESOLVER_INTNET = "restest"
-SERVER_INTNET = "servtest"
+# Require YAML module to parse the Ansible inventory configuration.
+require 'yaml'
 
-# These names should be identical to the ansible inventory
-RESOLVERS_VM_NAME = "resolvers-vm"
-GATEWAY_VM_NAME = "gateway-vm"
-SERVERS_VM_NAME = "servers-vm"
+# Read the hosts configuration.
+hosts_conf = YAML.load_file('inventory/hosts')
+
+# Read the VirtualBox host configuration.
+vbox_conf = YAML.load_file('inventory/host_vars/VBox-host')
+
+# These are used in each VM inventory host_vars file for the network names.
+# They are eval'ed later.
+HOSTONLY_NET = vbox_conf['vbox_hostonlyif_name']
+BRIDGE_NET = vbox_conf['bridge_net']
+RESOLVER_INTNET = vbox_conf['resolver_intnet']
+SERVER_INTNET = vbox_conf['server_intnet']
 
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
@@ -25,53 +31,29 @@ Vagrant.configure(2) do |config|
   # `vagrant box outdated`. This is not recommended.
   config.vm.box_check_update = false
 
-  # The resolvers-vm
-  config.vm.define RESOLVERS_VM_NAME do |r|
-    r.vm.box = "debian/bullseye64"
-    r.vm.provider "virtualbox" do |v|
-      v.name = RESOLVERS_VM_NAME
-      v.cpus = 2
-      v.memory = "2048"
-      # XXX template away the below lines
-      v.customize ["modifyvm", :id, "--nic2", "hostonly", "--hostonlyadapter2", HOSTONLY_NET]
-      v.customize ["modifyvm", :id, "--nic3", "intnet", "--intnet3", RESOLVER_INTNET]
-      v.customize ["modifyvm", :id, "--nic4", "bridged", "--bridgeadapter4", BRIDGE_NET]
+  # Setup each configured VM.
+  hosts_conf['all']['children']['vms'].each do |vhost, _|
+    config.vm.define vhost do |h|
+      vm_conf = YAML.load_file('inventory/host_vars/' + vhost)
+      h.vm.box = vm_conf['box']
+      h.vm.provider "virtualbox" do |v|
+        v.name = vhost
+        v.cpus = vm_conf['cpus']
+        v.memory = vm_conf['memory']
+        vm_conf['networks'].each do |n|
+          v.customize ["modifyvm", :id, n[0], n[1], n[2], eval(n[3])]
+        end
+      end
+      if vm_conf['extra'].nil? || vm_conf['extra'].empty?
+        # Left empty for ruby's weird empty check above
+      else
+        vm_conf['extra'].each do |k, v|
+            h.vm.instance_variable_set('@'+k, v)
+        end
+      end
+      # XXX the script is only copying files; replace with better provisioning?
+      h.vm.provision "shell", path: vm_conf['provision']
     end
-    # XXX the script is only copying files; replace with better provisioning
-    r.vm.provision "shell", path: "helper_scripts/setup-resolvers-vm.sh"
-  end
-
-  # The gateway-vm
-  config.vm.define GATEWAY_VM_NAME do |g|
-    g.vm.box = "debian/bullseye64"
-    g.vm.provider "virtualbox" do |v|
-      v.name = GATEWAY_VM_NAME
-      v.cpus = 2
-      v.memory = "1024"
-      # XXX template away the below lines
-      v.customize ["modifyvm", :id, "--nic2", "hostonly", "--hostonlyadapter2", HOSTONLY_NET]
-      v.customize ["modifyvm", :id, "--nic3", "intnet", "--intnet3", RESOLVER_INTNET]
-      v.customize ["modifyvm", :id, "--nic4", "intnet", "--intnet4", SERVER_INTNET]
-      v.customize ["modifyvm", :id, "--nic5", "bridged", "--bridgeadapter5", BRIDGE_NET]
-    end
-    # XXX the script is only copying files; replace with better provisioning
-    g.vm.provision "shell", path: "helper_scripts/setup-gateway-vm.sh"
-  end
-
-  # The servers-vm
-  config.vm.define SERVERS_VM_NAME do |s|
-    s.vm.box = "freebsd/FreeBSD-12.3-RELEASE"
-    s.vm.provider "virtualbox" do |v|
-      v.name = SERVERS_VM_NAME
-      v.cpus = 2
-      v.memory = "2048"
-      # XXX template away the below lines
-      v.customize ["modifyvm", :id, "--nic2", "hostonly", "--hostonlyadapter2", HOSTONLY_NET]
-      v.customize ["modifyvm", :id, "--nic3", "intnet", "--intnet3", SERVER_INTNET]
-    end
-    s.vm.boot_timeout = 900
-    # XXX the script is only copying files; replace with better provisioning
-    s.vm.provision "shell", path: "helper_scripts/setup-servers-vm.sh"
   end
 
 end
