--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -63,14 +63,15 @@ Vagrant.configure(2) do |config|
       end
       # ... and shutdown
       h.vm.provision "shell", inline: vm_conf['provision']['shutdown_inline']
-      # Run the normal provisioning the rest of the time
-      if vm_conf['provision']['playbook'].nil? || vm_conf['provision']['playbook'].empty?
-        # Left empty for ruby's weird empty check above
-      else
-        h.vm.provision "ansible", run: "always" do |ansible|
-          ansible.playbook = vm_conf['provision']['playbook']
-        end
-      end
+      ## Run the normal provisioning the rest of the time
+      #if vm_conf['provision']['playbook'].nil? || vm_conf['provision']['playbook'].empty?
+      #  # Left empty for ruby's weird empty check above
+      #  # This if is still here because servers-vm has no Ansible yet.
+      #else
+      #  h.vm.provision "ansible", run: "always" do |ansible|
+      #    ansible.playbook = vm_conf['provision']['playbook']
+      #  end
+      #end
     end
   end
 
