Disable ssh fingerprint checking for the VMs

--- a/auto/ansible.cfg
+++ b/auto/ansible.cfg
@@ -1,2 +1,5 @@
 [defaults]
+# Prepend Vagrant generated inventory for the access information
 inventory = .vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory,ansible/hosts
+# Do not verify hosts; too many *local* machines in the same-ish IP:port.
+host_key_checking = False
