--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -53,15 +53,14 @@ Vagrant.configure(2) do |config|
         end
       end
 
-      # Provision the network once...
-      # ... first net_inline if present ...
+      # Optional simple provisioning with net_inline
       if vm_conf['provision']['net_inline'].nil? || vm_conf['provision']['net_inline'].empty?
         # Left empty for ruby's weird empty check above
       else
         h.vm.provision "shell", inline: vm_conf['provision']['net_inline']
       end
 
-      # ... then net_script if present ...
+      # Optional simple provisioning with net_script
       if vm_conf['provision']['net_script'].nil? || vm_conf['provision']['net_script'].empty?
         # Left empty for ruby's weird empty check above
       else
@@ -72,17 +71,17 @@ Vagrant.configure(2) do |config|
       # XXX DISABLED: change to dummy playbook to get the vagrant genrated
       #               inventory; with current behavior makes more sense to
       #               provision manually.
-      if vm_conf['provision']['net_playbook'].nil? || vm_conf['provision']['net_playbook'].empty?
-        # Left empty for ruby's weird empty check above
-      else
-        h.vm.provision "ansible" do |ansible|
-          ansible.playbook = vm_conf['provision']['net_playbook']
-        end
-      end
+      #if vm_conf['provision']['net_playbook'].nil? || vm_conf['provision']['net_playbook'].empty?
+      #  # Left empty for ruby's weird empty check above
+      #else
+      #  h.vm.provision "ansible" do |ansible|
+      #    ansible.playbook = vm_conf['provision']['net_playbook']
+      #  end
+      #end
 
-      # h.vm.provision 'ansible' do |ansible|
-      #   ansible.playbook = 'ansible/dummy_vagrant_provision.yml'
-      # end
+      h.vm.provision 'ansible' do |ansible|
+        ansible.playbook = 'ansible/dummy_vagrant_provision.yml'
+      end
 
       # ... and shutdown
       # XXX DISABLED: recent Vagrant versions do not like that and record
@@ -94,14 +93,14 @@ Vagrant.configure(2) do |config|
       # XXX DISABLED: We need an explicit shutdown action for the VMs to be sure
       #               that any system changes above will be enabled for all
       #               possible OSes.
-      if vm_conf['provision']['playbook'].nil? || vm_conf['provision']['playbook'].empty?
-        # Left empty for ruby's weird empty check above
-        # This if is still here because servers-vm has no Ansible yet.
-      else
-        h.vm.provision "ansible", run: "always" do |ansible|
-          ansible.playbook = vm_conf['provision']['playbook']
-        end
-      end
+      #if vm_conf['provision']['playbook'].nil? || vm_conf['provision']['playbook'].empty?
+      #  # Left empty for ruby's weird empty check above
+      #  # This if is still here because servers-vm has no Ansible yet.
+      #else
+      #  h.vm.provision "ansible", run: "always" do |ansible|
+      #    ansible.playbook = vm_conf['provision']['playbook']
+      #  end
+      #end
     end
   end
 
