--- a/auto/ansible/network_provision_gateway-vm.yml
+++ b/auto/ansible/network_provision_gateway-vm.yml
@@ -23,10 +23,5 @@
         dest: /etc/rc.local
         mode: "u+x"
 
-    - name: Provisioning done; shutting down.
-      community.general.shutdown:
-
-    - name: Wait for SSH port to disappear.
-      ansible.builtin.wait_for:
-        port: "{{ ansible_ssh_port }}"
-        state: "stopped"
+    - ansible.builtin.import_tasks:
+        file: tasks/finish_provisioning.yml
