Try to setup bridge_net on FreeBSD only
As workaround of trying to setup things which are specific to our shared machine.
We should probably do this differently

--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -42,7 +42,9 @@ Vagrant.configure(2) do |config|
         v.memory = vm_conf['memory']
         vm_conf['networks'].each do |n|
           a = n['vbox_arguments']
-          v.customize ["modifyvm", :id, a[0], a[1], a[2], eval(a[3])]
+          if ! n['freebsd_only'] || Vagrant::Util::Platform.freebsd? then
+            v.customize ["modifyvm", :id, a[0], a[1], a[2], eval(a[3])]
+          end
         end
       end
       if vm_conf['extra'].nil? || vm_conf['extra'].empty?
