--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -79,6 +79,8 @@ Vagrant.configure(2) do |config|
       #  end
       #end
 
+      # This is a dummy ping command to make Vagrant auto generate an Ansible
+      # inventory.
       h.vm.provision 'ansible' do |ansible|
         ansible.playbook = 'ansible/dummy_vagrant_provision.yml'
       end
@@ -87,7 +89,7 @@ Vagrant.configure(2) do |config|
       # XXX DISABLED: recent Vagrant versions do not like that and record
       #               the host as shutdown outside of Vagrant; messes with the
       #               auto-generated inventory file.
-      #h.vm.provision "shell", inline: vm_conf['provision']['shutdown_inline']
+      #h.vm.provision "shell", inline: vm_conf['provision']['shutdown_command']
 
       # Run the normal provisioning the rest of the time
       # XXX DISABLED: We need an explicit shutdown action for the VMs to be sure
