--- a/auto/ansible/tasks/install_generic_packages_apt.yml
+++ b/auto/ansible/tasks/install_generic_packages_apt.yml
@@ -2,6 +2,12 @@
 - name: Install generic packages
   ansible.builtin.apt:
     pkg:
+      - wget
       - vim
       - tmux
+      - lsb-release
+      - ca-certificates
+      - python3-pip
+      - apt-transport-https
+    state: present
     update_cache: yes
