Explicit v4 static routes for resolvers<>gateway<>servers

--- a/auto/ansible/files/servers-rc.conf
+++ b/auto/ansible/files/servers-rc.conf
@@ -38,6 +38,13 @@ ifconfig_em2_alias10_ipv6="inet6 fd00::21:111:1/96"
 ifconfig_em2_alias11_ipv6="inet6 fd00::21:112:1/96"
 ifconfig_em2_alias12_ipv6="inet6 fd00::21:113:1/96"
 
+# XXX Explicit static route to resolvers.
+# Vagrant NAT replaces the configured default route.
+static_routes="to_resolvers"
+route_to_resolvers="-net 172.20.0.0/16 172.21.1.1"
+ipv6_static_routes="to_resolvers"
+ipv6_route_to_resolvers="fd00::21:0:0 -prefixlen 96 fd00::21:1:1"
+
 sendmail_submit_enable="NO"
 sendmail_outbound_enable="NO"
 sendmail_msp_queue_enable="NO"
