--- a/auto/ansible/tasks/install_generic_packages_apt.yml
+++ b/auto/ansible/tasks/install_generic_packages_apt.yml
@@ -1,7 +1,8 @@
 ---
-- name: Install generic packages
+- name: Install generic packages.
   ansible.builtin.apt:
     pkg:
+      - tar
       - wget
       - vim
       - tmux
