--- a/auto/Vagrantfile
+++ b/auto/Vagrantfile
@@ -34,7 +34,7 @@ Vagrant.configure(2) do |config|
   config.vm.box_check_update = false
 
   # Setup each configured VM.
-  hosts_conf['all']['children']['vms'].each do |vhost, _|
+  hosts_conf['all']['children']['vms']['hosts'].each do |vhost, _|
     config.vm.define vhost do |h|
       vm_conf = YAML.load_file('ansible/host_vars/' + vhost)
       #vm_extension_conf = YAML.load_file('../../ansible/host_vars/' + vhost)
