Add patches for pdns

--- a/auto/ansible/network_provision_servers-vm.yml
+++ b/auto/ansible/network_provision_servers-vm.yml
@@ -42,6 +42,8 @@
           - wget
           - nano
           - vim
+          - tmux
+          - htop
           - ca_root_nss
         state: present
 
