--- a/auto/ansible/provision_resolvers-vm.yml
+++ b/auto/ansible/provision_resolvers-vm.yml
@@ -11,7 +11,7 @@
         url: "{{ item.value['url'] }}"
         make_str: "{{ build_config['templates'][item.value['make_str']] }}"
         host_name: "{{ item.key }}"
-        files_copy: "{{ 'files_copy' in item.value and item.value['files_copy'] | default([]) }}"
+        files_copy: "{{ ('files_copy' in item.value and item.value['files_copy']) or [] }}"
       loop: "{{ build_config['software'] | dict2items }}"
 
     - name: Make sure the needed directories are there.
